# civic-sentinel

./: .gitignore  Dockerfile  README-PRODUCTION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/civic_sentinel/: main.py
src/civic_sentinel/routers/: analysis.py  documents.py
src/civic_sentinel/services/: graph_builder.py  llava_analysis.py  nlp_pipeline.py
src/civic_sentinel/store/: database.py
tests/: test_api.py  test_core.py
