[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civic-sentinel"
version = "0.1.0"
description = "AI-powered public policy analysis"
authors = [{name = "Oyebanji Adegboyega", email = "oyebanjiadegboyega@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "networkx>=3.0",
    "pandas>=2.0",
    "nltk>=3.8",  # optional but included
]

[project.scripts]
civic-sentinel = "civic_sentinel.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.0",
    "isort>=5.13",
]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
